# bench

./: .gitignore  Cargo.toml  README.md  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vercel.sh
.config/: mise.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
crate/: Cargo.toml
crate/src/: lib.rs
public/: _headers
src/app/: layout.tsx  page.tsx
src/app/allocation/: page.tsx
src/app/compression/: page.tsx
src/components/: Button.tsx  FileInput.tsx  PageHead.tsx
src/components/icons/: GithubIcon.tsx  index.tsx
src/components/navigation/: BenchmarkLayout.tsx  Sidebar.tsx
src/features/allocation/: Allocation.tsx  AllocationForm.tsx
src/features/allocation/worker/: index.ts  module.ts
src/features/compression/: AlgorithmSelector.tsx  Compression.tsx  FileInput.tsx  ResultChart.tsx  ResultTable.tsx  ResultsExport.tsx  index.tsx  store.ts  types.tsx
src/features/compression/worker/: module.tsx
src/features/worker/: Allocation.tsx  AllocationForm.tsx  HarnessProvider.tsx  engine.ts  index.ts  worker.ts
src/hooks/: index.tsx  useFileDrop.tsx
src/lib/: eq.ts  wasm.ts
src/pages/: _app.tsx  index.tsx
src/styles/: globals.css  tailwind.css
