[workspace]
resolver = "2"
members = [
    "packages/alloc",
    "packages/alloc-bumpalo",
    "packages/alloc-bump-scope",
    "packages/alloc-talc",
    "packages/br-read",
    "packages/br-write",
    "packages/libdeflate",
    "packages/lz4",
    "packages/miniz",
    "packages/zlib-rs",
    "packages/zstd-read",
    "packages/zstd-write",
    "packages/zune",
]

[profile.release]
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
wasm-bindgen = { version = "0.2.100" }
